# eBPF-Linux-Patch-BTF-Parser

./: .gitignore  DEV.md  Dockerfile  README.md  build.sh  conf.sh  func_btf.txt  func_name_hash.txt
.github/workflows/: build_docker.yaml
btf_parser/: CMakeLists.txt  bpfparser.cmake  check.py  check_btf_func.py  main.c  main.cpp
btf_parser/include/: btf_tool.h  wrapper.h
btf_parser/src/: btf_tool.c  wrapper.cpp
btf_writer/: README.md  check_size.py  gen_btf.sh  write_elf.c
end-to-end-poc/memcached/: Dockerfile
jsonPatch_writer/: 01-cve.bpf.c  01-cve.bpf.h  01-cve.c  02-cve.bpf.c  02-cve.bpf.h  02-cve.c  03-cve.bpf.c  03-cve.bpf.h  03-cve.c  04-cve.bpf.c  04-cve.bpf.h  04-cve.c  05-cve.bpf.c  05-cve.bpf.h  05-cve.c  Makefile  README.md  config.json  ebpf_helper.h  ebpf_patch_common.h  export_data_types.c  export_data_types.ll  gen_patch.py  layout.txt  main_test.c  ubpf.h
jsonPatch_writer/hello_btf/: 04-cve-btf.json  all.btf  asm.list  btf.ext  notes.md  raw_asm.list  raw_asm2.list
pahole_patch/: pahole.patch
patch/: dump-btf.patch  pahole.patch  pahole.patch.1667183102  pahole.patch.1670246282  pahole.patch.1670246305  pahole.patch.1670246326  pahole.patch.1670246340  pahole.patch.1670246362  pahole.patch.1670246449  pahole.patch.1670249881  pahole.patch.1670250068  pahole.patch.1670250150  pahole.patch.1670250200  pahole.patch.1670250240  pahole.patch.1670250422  pahole.patch.1670250559  pahole.patch.1670482550
scripts/: build_all.sh  build_deps.sh  build_hash_test.sh  build_pahole_patch.sh  gen_patch.sh
test_prog/: Makefile  README.md
test_prog/00-tests-pahole/: main  main.c  test.sh
test_prog/01-simple_test/: 1-gen_btf.sh  2-parse_btf.sh  2-read_btf.sh  Makefile  libtest.c  libtest.h  (+3 more)
(+32 files in other folders)
