cmake_minimum_required(VERSION 2.8)
PROJECT(getBTF)

SET(CMAKE_BUILD_TYPE "RelWithDebInfo") # Debug Release RelWithDebInfo MinSizeRel
FILE(GLOB SOURCE_1 "${CMAKE_SOURCE_DIR}/main.c")
FILE(GLOB SOURCE_2 "${CMAKE_SOURCE_DIR}/src/wrapper.cpp")

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include/")
ADD_DEFINITIONS("-Wall -Werror -lstdc++") #  -std=c++11
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_1} ${SOURCE_2})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE btfparse)
ADD_SUBDIRECTORY("btfparse")
